2012-12-05  Pedro Vicente  <pvicente@uci.edu>
    
    * bm: ncks #54 Extract associated coordinates with CF "coordinates" attribute (netCDF4 file)
    
2012-12-05  Pedro Vicente  <pvicente@uci.edu>
    
    * bm: ncks #51-53 Extract associated coordinates test 2-4 (netCDF3/4 file)
    
2012-12-04  Pedro Vicente  <pvicente@uci.edu>
    
    * bm: ncks #50 Extract associated coordinates test 1 (netCDF3 file)
    
2012-12-01  Pedro Vicente  <pvicente@uci.edu>
    
    * deprecate grp_nm member of nm_id_sct; use full group name to get name as needed

2012-11-30  Pedro Vicente  <pvicente@uci.edu>

	* bm: ncks #39 2D variable definition (netCDF4 file)
    
    * bm: ncks #40-49 Variable/Group extraction test 1-8
    
    * deprecate grp_id member of nm_id_sct; use full group name to get ID as needed
      
2012-11-29  Pedro Vicente  <pvicente@uci.edu>

	* bm: ncks #39 exclude variables (netCDF3 file)
    
    * deprecate nco_var_lst_xcl and use nco_var_lst_xcl_trv for both netCDF3 and netCDF4
    
    * Qt: allow Win32 build with netCDF3; define environment $(HEADER_NETCDF3) and $(LIB_NETCDF3)
      and use CONFIG += netcdf3 in /qt/nco.pri
    
2012-11-28  Pedro Vicente  <pvicente@uci.edu>

	* Add --get_file_info option
    
    * bm: ncks #33 --get_grp_info option (netCDF3 file)
    
    * bm: ncks #34 --get_grp_info option (netCDF4 file)
    
    * bm: ncks #35 --get_file_info option (netCDF3 file)
    
    * bm: ncks #36 --get_file_info option (netCDF4 file)
    
    * bm: ncks #37 exclude all variables (netCDF3 file)
    
    * bm: ncks #38 exclude all variables (netCDF4 file)

2012-11-27  Pedro Vicente  <pvicente@uci.edu>

    * Add --get_grp_info option

2012-11-20  Pedro Vicente  <pvicente@uci.edu>

	* bm: If NCO_AVOID_BM_REPORT do not prompt to send benchmark results to project
   
    * bm: Detect ENABLE_NETCDF4 and HAVE_NETCDF4_H in config.h and run tests accordingly

2012-11-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.4 release procedure: